codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__bedrock_runtime_models.snap
---
source: tui/src/chatwidget/tests/bedrock_catalog_tests.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

  Search models or aliases
› global.openai.gpt-5.6-sol (current)  Latest frontier agentic coding model.
  global.openai.gpt-6-astra            Our most capable model for complex, demanding work.
  global.openai.gpt-5.6-terra          Balanced agentic coding model for everyday work.
  global.openai.gpt-5.6-luna           Fast and affordable agentic coding model.
  us.openai.gpt-5.6-sol                Latest frontier agentic coding model.
  us.openai.gpt-6-astra                Our most capable model for complex, demanding work.
  us.openai.gpt-5.6-terra              Balanced agentic coding model for everyday work.
  us.openai.gpt-5.6-luna               Fast and affordable agentic coding model.

  Press enter to confirm or esc to go back
