codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_app_server_capacity_retry_status.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Reconnecting... 1/5 (0s • esc to interrupt)                                   "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
