codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

  Search models or aliases
› gpt-5.6-sol (default)  Latest frontier agentic coding model.
  gpt-5.6-terra          Balanced agentic coding model for everyday work.
  gpt-5.6-luna           Fast and affordable agentic coding model.
  gpt-5.5                Frontier model for complex coding, research, and
                         real-world work.
  gpt-5.2 (current)      Optimized for professional work and long-running
                         agents.

  Press enter to confirm or esc to go back
